welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:3: error: not found: value T
		if (T(i)==value) {
                    ^