welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
	for (i<- 1 to nums.length-1) {
		if (T(i)==value) {
			return i
		}
	}
	return -1
}
